--- a/Article-preview-component.html
+++ b/Article-preview-component.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 <link rel="stylesheet" href="Article-preview-component.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Manrope:wght@300;400;700&display=swap" rel="stylesheet">
   <title>Article preview component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
